# Parlios-Engine

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  parlios-engine_zip_manifest.json  pyproject.toml  requirements.txt  run_server.cmd
.github/workflows/: chatops.append.yml  chatops.delete.yml  chatops.trigger.yml  ci.yml  green.alert.yml  readme-autogen.yml  ua_n8n_notify.yml  x-ua-x-hardening.yml
.trigger/ua_core_dispatch/: daily-digest_20251101T032646Z.txt  finalize-check_20251101T031925Z.txt
.ua/memory/: session_20251101T025444Z.json  session_20251101T040826Z.json  session_20251101T041759Z.json  session_20251101T041805Z.json  session_20251101T041933Z.json  session_20251101T042016Z.json  session_20251101T042021Z.json
engine/agents/: clarify.py  plan.py  validate.py
engine/api/: auth.py  main.py
engine/core/: models.py  orchestrator.py
engine/memory/: store.py
examples/: example_flou_vers_brief.md  example_rd_synthese.md
orchestrateur-IA-personnalise_v4/orchestrateur-IA-personnalise/: Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt  ruff.toml
orchestrateur-IA-personnalise_v4/orchestrateur-IA-personnalise/configs/: persona.yaml  thinking_framework.yaml
orchestrateur-IA-personnalise_v4/orchestrateur-IA-personnalise/data/: examples.jsonl
parlios_engine_finalization_pack/parlios_engine_finalization_pack/: README_FINALIZATION.md
parlios_engine_ops_kit/parlios_engine_ops_kit/docs/: OPS.md  (+1 more)
prompts/: README.md
scripts/: smoke.ps1
tests/: test_api.py  test_pipeline_mvp.py
(+36 files in other folders)
